--- a/Balance.html
+++ b/Balance.html
@@ -9,57 +9,38 @@
 <style>
 /* ===============================
    CSS مخصص للبطاقة فقط
-   تم استبدال الألوان الثابتة بمتغيرات CSS لتوافق الثيم
    =============================== */
-:root {
-  /* سيتم تعريف هذه المتغيرات في الصفحة الرئيسية، يتم استخدامها هنا */
-  --primary-color: #0d3b14; 
-  --secondary-color: #e5a72d; 
-  --accent-color: #f7f3e9; 
-  --text-color-dark: #2d3748;
-  --danger-color: #dc3545;
-  --success-color: #28a745;
-  --white-color: #ffffff; 
-  /* Dark Mode Variables */
-  --dark-bg: #1e1e1e;
-  --dark-card: #2d2d2d;
-  --dark-text: #f0f0f0;
-}
-
 body{
   font-family: "Tajawal", sans-serif;
-  background: transparent !important; /* مهم جداً للتوافق داخل الـ iframe */
-  margin:0; 
-  padding:0; 
-  display:block; 
-  min-height:auto; 
-  color: var(--text-color-dark);
+  background: linear-gradient(120deg, #f7f3e9, #eaf0f5);
+  margin:0; padding:24px;
+  display:flex; justify-content:center; align-items:center;
+  min-height:100vh; color: #222;
 }
 
 .card-wrapper {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   width: 100%;
-  margin: 0; 
+  margin: 10px 0;
 }
 
 .card {
-  background: linear-gradient(145deg, var(--white-color), #f0f4f8);
-  border-radius: 20px; 
-  padding: 20px; 
-  box-shadow: 0 4px 15px rgba(0,0,0,0.1); 
-  text-align: right; 
-  width: 100%; 
-  max-width: none; 
-  transition: all 0.4s cubic-bezier(0.2, 0.8, 0.2, 1.2); 
+  background: linear-gradient(145deg, #ffffff, #f0f4f8);
+  border-radius: 25px;
+  padding: 25px 30px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+  text-align: center;
+  width: 380px;
+  transition: all 0.3s ease, box-shadow 0.3s ease;
   position: relative;
   overflow: hidden;
 }
 
 .card:hover {
-  transform: translateY(-3px) scale(1.005); 
-  box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+  transform: translateY(-8px) scale(1.02);
+  box-shadow: 0 15px 35px rgba(0,0,0,0.2);
 }
 
 .card::before {
@@ -69,7 +50,7 @@ body{
   left: -50%;
   width: 200%;
   height: 200%;
-  background: radial-gradient(circle, rgba(13, 59, 20, 0.1) 0%, transparent 60%); 
+  background: radial-gradient(circle, rgba(0,123,131,0.08) 0%, transparent 60%);
   opacity: 0;
   transition: opacity 0.4s ease;
   pointer-events: none;
@@ -77,21 +58,16 @@ body{
 .card:hover::before { opacity: 1; }
 
 .card-title {
-  font-size: 1.2rem;
-  color: var(--primary-color);
-  margin-bottom: 15px;
-  font-weight: 700;
-  border-bottom: 2px solid var(--secondary-color);
-  padding-bottom: 5px;
-  display: flex;
-  align-items: center;
+  font-size: 1.6rem;
+  color: #007b83;
+  margin-bottom: 20px;
+  letter-spacing: 0.5px;
 }
-.card-title i { margin-left: 8px; font-size: 1.1em; color: var(--secondary-color); }
 
 .balance {
-  font-size: 2.5rem; 
-  font-weight: 900;
-  color: var(--primary-color); 
+  font-size: 2.8rem;
+  font-weight: bold;
+  color: #222;
   margin-bottom: 20px;
   display: flex;
   justify-content: center;
@@ -99,41 +75,33 @@ body{
 }
 
 .loader {
-  border: 4px solid var(--accent-color);
-  border-top: 4px solid var(--secondary-color); 
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #007b83;
   border-radius: 50%;
-  width: 35px;
-  height: 35px;
+  width: 40px;
+  height: 40px;
   margin: 0 auto;
   animation: spin 1s linear infinite;
 }
 @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
 
 .sub-stats {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
+  display: flex;
+  justify-content: space-around;
   margin-bottom: 20px;
-  text-align: center;
-  font-size: 14px;
+  font-weight: bold;
 }
-.sub-stats div { 
-  padding: 10px; 
-  border-radius: 12px; 
-  line-height: 1.4;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-  font-weight: 700;
-}
-.sub-stats .total { background: #e6f7ff; color: #007b83; }
-.sub-stats .active { background: #e8f9ed; color: var(--success-color); }
-.sub-stats .inactive { background: #f9e8e8; color: var(--danger-color); }
+.sub-stats div { padding: 8px 12px; border-radius: 12px; }
+.sub-stats .total { background: #cce5ff; color: #004085; }
+.sub-stats .active { background: #d4edda; color: #155724; }
+.sub-stats .inactive { background: #f8d7da; color: #721c24; }
 
 .donut {
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
-  background: conic-gradient(var(--success-color) 0% 50%, var(--danger-color) 50% 100%);
-  margin: 15px auto;
+  background: conic-gradient(#28a745 0% 50%, #dc3545 50% 100%);
+  margin: 10px auto;
   transition: background 1s ease;
 }
 
@@ -141,20 +109,19 @@ button {
   margin-top: 10px;
   padding: 10px 22px;
   border: none;
-  border-radius: 8px;
-  background: var(--primary-color);
+  border-radius: 10px;
+  background: #007b83;
   color: white;
   font-size: 1rem;
   cursor: pointer;
-  transition: background 0.3s, transform 0.2s;
 }
-button:hover { background: #1a5c24; }
+button:hover { background: #005f63; }
 
 .toast {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background: var(--primary-color);
+  background: #007b83;
   color: white;
   padding: 10px 18px;
   border-radius: 10px;
@@ -165,83 +132,29 @@ button:hover { background: #1a5c24; }
 .toast.show { opacity: 1; }
 
 .current-rank {
-  font-size: 1rem;
-  margin: 10px 0;
-  font-weight: 700;
-  color: var(--text-color-dark);
-}
-.current-rank span {
-    color: var(--secondary-color);
-    font-size: 1.3rem;
-    font-weight: 900;
-    margin-left: 5px;
+  font-size: 1.2rem;
+  margin: 15px 0;
+  font-weight: bold;
+  color: #ff6600;
 }
 
 .top3 {
-  background: var(--accent-color);
-  padding: 15px;
-  border-radius: 15px;
-  margin-top: 20px;
-  box-shadow: inset 0 0 10px rgba(0,0,0,0.05);
+  margin-bottom: 15px;
 }
-.top3 h3 { 
-    margin-bottom: 10px; 
-    font-size: 1.1rem; 
-    color: var(--primary-color); 
-    border-bottom: 1px dotted #ccc;
-    padding-bottom: 5px;
-}
-.top3 ol { 
-    padding-right: 25px; 
-    padding-left: 0;
-    text-align: right; 
-    list-style-type: decimal; 
-}
-.top3 li { 
-    margin-bottom: 8px; 
-    font-weight: 500; 
-    color: var(--text-color-dark);
-}
+.top3 h3 { margin-bottom: 8px; font-size: 1.2rem; color: #007b83; }
+.top3 ol { padding-left: 20px; text-align: right; }
+.top3 li { margin-bottom: 5px; font-weight: bold; }
+.top3 li:nth-child(1) { color: #FFD700; }
+.top3 li:nth-child(2) { color: #C0C0C0; }
+.top3 li:nth-child(3) { color: #cd7f32; }
 
-/* ------------------------------------- */
-/* دعم الوضع الليلي (Dark Mode) */
-/* ------------------------------------- */
-body.dark-mode {
-    color: var(--dark-text);
-}
-body.dark-mode .card {
-    background: linear-gradient(145deg, var(--dark-card), #3c3c3c); 
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-}
-body.dark-mode .card-title {
-    color: var(--secondary-color);
-}
-body.dark-mode .balance {
-    color: var(--dark-text);
-}
-body.dark-mode .loader {
-    border-top: 4px solid var(--secondary-color); 
-}
-body.dark-mode .sub-stats .total { background: #1a3a4d; color: #8ab4f8; }
-body.dark-mode .sub-stats .active { background: #14351b; color: #6aa84f; }
-body.dark-mode .sub-stats .inactive { background: #3d1b1f; color: #f28b82; }
-body.dark-mode .current-rank { color: var(--dark-text); }
-body.dark-mode .top3 { 
-    background: #121212; 
-    box-shadow: inset 0 0 10px rgba(255,255,255,0.05);
-}
-body.dark-mode .top3 h3 { color: var(--secondary-color); border-bottom: 1px dotted #333;}
-body.dark-mode .top3 li { color: var(--dark-text); }
-body.dark-mode button { background: var(--secondary-color); color: var(--primary-color); }
-body.dark-mode button:hover { background: #f0b940; }
-body.dark-mode .toast { background: var(--secondary-color); color: var(--primary-color); }
 </style>
 </head>
 <body>
 
 <div class="card-wrapper">
   <div class="card">
-    <h2 class="card-title"><i class="fas fa-wallet"></i> الرصيد والمنافسة</h2>
+    <h2 class="card-title">رصيدي الحالي</h2>
     <div class="balance" id="current-balance"><div class="loader"></div></div>
 
     <div class="sub-stats">
@@ -272,29 +185,14 @@ body.dark-mode .toast { background: var(--secondary-color); color: var(--primary
 </div>
 
 <script>
-// ***** تم الإبقاء على رابط Apps Script كما طلب المستخدم *****
 const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxi5fVMNBLAh_6jTMRs2vptnbjOPUj8_IumUHfZjslI_1UHv6zqCGdKermTw_tZDGQV/exec';
-
-// ***** التعديل الحاسم: إزالة المعرّف الافتراضي (TTTTTT11) *****
 const params = new URLSearchParams(window.location.search);
-const marketerId = params.get('marketer_id'); 
-// *************************************************************
+const marketerId = params.get('marketer_id') || 'TTTTTT11';
 
 function showToast(msg, isError=false) {
   const toast = document.getElementById('toast');
-  const isDarkMode = document.body.classList.contains('dark-mode');
-  const primary = '#007b83'; // Primary-like color for toast (used originally)
-  const secondary = '#e5a72d';
-  
   toast.textContent = msg;
-  if (isError) {
-      toast.style.background = '#d9534f'; 
-      toast.style.color = 'white';
-  } else {
-      toast.style.background = isDarkMode ? secondary : primary; 
-      toast.style.color = isDarkMode ? '#0d3b14' : 'white';
-  }
-  
+  toast.style.background = isError ? '#d9534f' : '#007b83';
   toast.classList.add('show');
   setTimeout(() => toast.classList.remove('show'), 2500);
 }
@@ -323,7 +221,6 @@ function updateUI(stats) {
   const total = stats.active + stats.inactive;
   const activePercent = total ? (stats.active/total)*100 : 0;
   const donut = document.getElementById('statusDonut');
-  // استخدام المتغيرات هنا ليس ممكناً مباشرة في JS، لكن استخدام الألوان الثابتة يكفي لتغيير النسبة
   donut.style.background = `conic-gradient(#28a745 0% ${activePercent}%, #dc3545 ${activePercent}% 100%)`;
 
   document.getElementById('current-rank').textContent = stats.rank;
@@ -334,48 +231,21 @@ function updateUI(stats) {
     if (m.name) {
       const li = document.createElement('li');
       li.textContent = `${m.name} – ${m.total}$`;
-      
-      // تعيين ألوان خاصة للمراكز الثلاثة الأولى (للتأثير البصري)
-      if (index === 0) li.style.color = '#FFD700';
-      if (index === 1) li.style.color = '#C0C0C0';
-      if (index === 2) li.style.color = '#cd7f32';
-      
       top3List.appendChild(li);
     }
   });
 }
 
-// دالة تهيئة العرض
 async function initDisplay() {
-  if (!marketerId) {
-    document.getElementById('current-balance').innerHTML = '<span style="font-size: 1.2rem; color: #dc3545; font-weight: 700;">لا يوجد معرّف مسوّق في الرابط.</span>';
-    document.getElementById('total-members').textContent = 0;
-    document.getElementById('active-members').textContent = 0;
-    document.getElementById('inactive-members').textContent = 0;
-    return;
-  }
-  
   document.getElementById('current-balance').innerHTML = '<div class="loader"></div>';
   const stats = await fetchStats(marketerId);
   updateUI(stats);
   if (stats) showToast('تم تحديث البيانات بنجاح ✅');
 }
 
-// ***** إضافة مستمع رسائل لتغيير الثيم ديناميكياً من الصفحة الرئيسية *****
-window.addEventListener('message', (event) => {
-  if (event.data === 'dark_mode_on') {
-    document.body.classList.add('dark-mode');
-  } else if (event.data === 'dark_mode_off') {
-    document.body.classList.remove('dark-mode');
-  }
-}, false);
-// *************************************************************************
-
-
 document.getElementById('refresh-balance').addEventListener('click', initDisplay);
 initDisplay();
 </script>
-
 
 </body>
 </html>
