--- a/home.html
+++ b/home.html
@@ -87,6 +87,6 @@
         <i class="fas fa-check-circle"></i> تم نسخ الرابط إلى الحافظة!  
     </div>  
     <script src="marketer_tracker.js"></script>   
-    <script src="table-logic.js"></script>   
+    <script src="home-logic.js"></script>   
 </body>  
 </html>
