--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <p class="note" style="text-align: left; margin-top: 0;">
-                    <a href="#" style="color: var(--primary-color); text-decoration: none;">هل نسيت كلمة المرور؟</a>
+                    <a href="Reset-Password.html" style="color: var(--primary-color); text-decoration: none;">هل نسيت كلمة المرور؟</a>
                 </p>
                 <div style="display:flex;gap:10px;align-items:center;margin-top:15px">
                     <button type="submit" class="btn-accept" id="loginSubmitBtn">تسجيل الدخول</button>
@@ -81,7 +81,8 @@
             </form>
         </div>
 
-        <div id="registerWrapper" class="form-wrapper">
+        <div <div id="registerWrapper" class="form-wrapper" style="display: none;">
+
             <div id="termsSection">
               <div class="terms">
                 <h3>الشروط العامة للمسوقين</h3>
