--- a/Reset-Password.html
+++ b/Reset-Password.html
@@ -266,13 +266,18 @@
       </div>
     </div>
   </div>
-
+      <script src="url.js"></script>   
   <script>
     // ----------------------------------------------------------------------
     // الدوال الأساسية (من الكود الأصلي)
     // ----------------------------------------------------------------------
     // يجب استبدال هذا برابط Apps Script الفعلي الخاص بك
-    const URL_LONG = "https://script.google.com/macros/s/AKfycbyYOKcDd23gO080lFgeAozKDRABnTVaGETW8c69priQ8spTopQRGuz52fCJ_8U97mI/exec"; 
+
+
+
+
+
+
     
     function setLoadingState(buttonElement, loadingText = 'جاري الإرسال...') {
         if (!buttonElement.dataset.originalText) {
