--- a/dialog.html
+++ b/dialog.html
@@ -69,7 +69,7 @@
     display: none; 
     border-top: 1px solid #ddd;
     padding-top: 10px;
-    max-height: 200px; /* تصغير الارتفاع ليلائم الـ iframe */
+    height: auto; /* تصغير الارتفاع ليلائم الـ iframe */
     overflow-y: auto;   
     padding-right: 5px; 
   }
