--- a/home.html
+++ b/home.html
@@ -139,7 +139,7 @@
             console.log('Marketer ID cleared. Logging out.');
             
             // ⚠️ قم بتغيير هذا الرابط لتوجيه المستخدم إلى صفحة تسجيل الدخول أو الصفحة الرئيسية
-            window.location.href = '../index.html'; 
+            window.location.href = 'index.html'; 
         }
     </script>
     
