--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
 
                 <div style="text-align: center; margin-top: 40px; padding: 20px; border-top: 1px solid #eee;">
                     <button onclick="logoutUser()" style="background: #dc3545; color: white; border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-size: 16px;">
-                        <i class="fas fa-sign-out-alt" style="margin-left: 8px;"></i> تسجيل الخروج
+                        <i class="index.html" style="margin-left: 8px;"></i> تسجيل الخروج
                     </button>
                 </div>
                 
