--- a/home.html
+++ b/home.html
@@ -21,6 +21,16 @@
 
 </head>  
 <body>  
+
+
+<div id="loadingOverlay" class="loading-overlay">
+  <div class="spinner"></div>
+  <div class="loading-text">جاري التحقق من الجلسة...</div>
+</div>
+
+
+
+    
     <div class="dashboard-container">  
         <header>  
             <h1>لوحة تحكم المسوِّق</h1>  
