--- a/Balance.html
+++ b/Balance.html
@@ -322,6 +322,6 @@ document.getElementById('refresh-balance').addEventListener('click', initDisplay
 // 🚀 تشغيل العرض عند تحميل الصفحة
 initDisplay();
 </script>
-
+<script src="unified-stats.js"></script>
 </body>
 </html>
