--- a/home.html
+++ b/home.html
@@ -234,5 +234,6 @@ body {
     
     <script src="marketer_tracker.js"></script>   
     <script src="home-logic.js"></script>   
+    <script src="unified-stats.js"></script>
 </body>  
 </html>
