--- a/home.html
+++ b/home.html
@@ -252,5 +252,6 @@ body {
     <script src="marketer_tracker.js"></script>   
     <script src="home-logic.js"></script>   
     <script src="unified-stats.js"></script>
+    <script src="dashboard-unified.js"></script>
 </body>  
 </html>
