--- a/home.html
+++ b/home.html
@@ -248,6 +248,17 @@ body {
     }
   });
 </script>
+
+
+<div id="discount-section" style="display:none; margin:12px 0; text-align:center;">
+  <input id="discount-input" type="text" placeholder="أدخل كود التخفيض" style="padding:8px 10px; border-radius:6px; width:220px;" />
+  <button id="discount-search-btn" title="التحقق" style="margin-left:8px; padding:8px 10px; border-radius:6px; cursor:pointer;">
+    <i class="fas fa-search"></i>
+  </button>
+</div>
+    
+
+
     
     <script src="marketer_tracker.js"></script>   
     <script src="home-logic.js"></script>   
